--- a/lib/res/css/style.css
+++ b/lib/res/css/style.css
@@ -22,7 +22,8 @@ QTextEdit {
 /*===============================================*/
 
 /* backgound */
-GMessageView {
+GMessageView,
+GGraphView {
     background: #051039;
 }
 
