--- a/lib/res/css/style.css
+++ b/lib/res/css/style.css
@@ -17,6 +17,31 @@ QTextEdit {
     padding: 9px;
 }
 
+/* QTabWidget */
+QTabWidget::pane { /* The tab widget frame */
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    top: 0;
+}
+
+QTabWidget::tab-bar {
+    alignment: left;
+}
+
+/* QTabBar */
+QTabBar::tab {
+    background: none;
+    border: none;
+    padding:  5px 10px;
+}
+
+QTabBar::tab:hover {
+    background: none;
+}
+
+QTabBar::tab:selected {
+    background: rgba(255, 255, 255, 0.2);
+}
+
 /*===============================================*/
 /* Customized Style */
 /*===============================================*/
